[tool.poetry]
name = "feedbackfirst"
version = "0.1.0"
description = ""
authors = ["anaaaiva <ivawillow.a@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.40.1"
ollama = "^0.3.3"
ruff = "^0.8.0"
pre-commit = "^4.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.ruff]
fix = true
target-version = "py312"
line-length = 120
extend-include = ["*.ipynb"]

[tool.ruff.lint]
select= [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff
    "D",   # pydocstyle
]
ignore = [
    "RUF001",
]
